# checkers-game

./: .gitignore  README.md
CheckersProject/: .gitignore  CMakeLists.txt  vcpkg.json
CheckersProject/include/: GameBoard.hpp
CheckersProject/src/: GameBoard.cpp  main.cpp
src/: main.cpp
